test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clone-list-sync-same-trigger-sources-delete-source-trigger-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: clone-list-sync-same-trigger-sources-delete-source-target-ns
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: clone-list-sync-same-trigger-sources-delete-source-cpol
spec:
  rules:
  - name: sync-secret
    match:
      all:
      - resources:
          annotations:
            myProj/cluster.addon.sync.targetNamespace: "?*"
          kinds:
          - Secret
          namespaces:
          - clone-list-sync-same-trigger-sources-delete-source-trigger-ns
    generate:
      namespace: '{{ request.object.metadata.annotations."myProj/cluster.addon.sync.targetNamespace" }}'
      synchronize: true
      cloneList:
        namespace: clone-list-sync-same-trigger-sources-delete-source-trigger-ns
        kinds:
          - v1/Secret
        selector:
          matchLabels:
            allowedToBeCloned: "true"
