test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/02-check.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- trigger-1.yaml
- trigger-2.yaml
assert:
- target-1.yaml
- target-2.yaml
