test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/03-delete.yaml
# Specifying the kind as `TestStep` performs certain behaviors like this delete operation.
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: v1
  kind: Secret
  name: mysecret-2
  namespace: clone-list-sync-same-trigger-sources-delete-source-trigger-ns
