test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/05-check.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- target-2.yaml
error:
- target-1.yaml
