test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/06-check.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
error:
- target-1.yaml
- target-2.yaml
