test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/target-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  annotations:
    myProj/cluster.addon.sync.targetNamespace: clone-list-sync-same-trigger-sources-delete-source-target-ns
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: clone-list-sync-same-trigger-sources-delete-source-target-ns
type: Opaque
