test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/trigger-1.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    location: europe
    allowedToBeCloned: "true"
  annotations:
    myProj/cluster.addon.sync.targetNamespace: clone-list-sync-same-trigger-sources-delete-source-target-ns
  name: mysecret-1
  namespace: clone-list-sync-same-trigger-sources-delete-source-trigger-ns
type: Opaque
data:
  foo: YmFy
