test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-sources-delete-source/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: clone-list-sync-same-trigger-sources-delete-source-cpol
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
